--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,18 @@
     transform: rotate(360deg);
   }
 }
+
+.dark-theme{
+--main-heading :#5f99be;
+--para-clr:#fff;
+--btn-text-clr:#5f99be;
+--btn-bg-color:#5f99be;
+--bg-clr:#111b20;
+}
+.light-theme{
+  --main-heading :#5f99be;
+--para-clr:#333;
+--btn-text-clr:#fff;
+--btn-bg-color:#111b20;
+--bg-clr:#fff;
+}
